--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
     <title>2048</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" media="screen" href="style.css" />
-    
 </head>
 <body>
 
@@ -14,14 +13,17 @@
 
 <button class="newgame"> New Game</button>
 
-<p class="score"> Score </p>
+<h3> Score:</h3>
+
 
 
 <div class="nbTwo"></div>
 
 
 <div class ="game-container"> 
-   <div class ="container">   
+        <p class="score"> </p>   
+   <div class ="container">
+        
    </div> 
 </div>
 
@@ -31,6 +33,7 @@
 
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-<script src="main.js"></script>    
+<script src="main.js"></script>
+ 
 </body>
 </html>
